--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.11",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
